# cbr-user-session

./: .gitmodules  README.md  pyproject.toml  requirements.txt  start-local-server.sh
.github/actions/aws__deploy-lambda/: action.yml
.github/actions/run-tests/: action.yml
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__main.yml
cbr_user_session/: User_Session__Config.py  User_Session__Shared_Objects.py
cbr_user_session/backend/guests/: S3_DB__Guest.py  S3_DB__Guests.py  Temp_DB_Guest.py
cbr_user_session/fast_api/: User_Session__Fast_API.py
cbr_user_session/fast_api/routes/: Routes__Guest.py  Routes__Guests.py  Routes__Info.py  Routes__Session.py
cbr_user_session/lambdas/: handler.py
cbr_user_session/schemas/: Model__Guest__Config.py
cbr_user_session/user_session/: User_Session__Utils.py
cbr_user_session/utils/: Version.py
deploy/docker/cbr-user-data/: Dockerfile  docker-compose.yml
deploy/docker/cbr-user-session/: docker-compose.yml  start.sh
deploy/lambdas/: Deploy_Lambda__User_Session.py  test_Deploy_Lambda__User_Session.py
tests/integration/: test_User_Session__Config.py  user_session__objs_for_tests.py
tests/integration/backend/guests/: test_S3_DB__Guest.py  test_S3_DB__Guests.py  test_Temp_DB_Guest.py
tests/integration/fast_api/routes/: test__client__Routes__Guest.py  test__client__Routes__Guests.py  test__client__Routes__Info.py  test__int__Routes__Session.py
tests/integration/lambdas/: test_handler.py
tests/integration/user_session/: test_User_Session__Utils.py
tests/unit/utils/: test_Version.py
