[tool.poetry]
name        = "cbr_user_session"
version     = "v0.7.5"
description = "CBR - User Session"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/cbr-user-session"
repository  = "https://github.com/the-cyber-boardroom/cbr-user-session"

[tool.poetry.dependencies]
python            = "^3.11"
osbot-utils       = "*"
osbot-local-stack = "*"
cbr-shared        = "*"
osbot-aws         = "*"
osbot-fast-api    = "*"
mangum            = "*"
httpx             = "*"

[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
